# CeylonicusC

./: .gitignore  .test_soemthing  CMakeLists.txt  Makefile  README.md  TEST.md  keywords.c  lexer.c  main.c  utf8.c  writex.cyl
include/: keywords.h  lexer.h  token.h  utf8.h
src/: lexer.c  main.c  utf8.c
src/include/: ast.h  keywords.h  lexer.h  main.c  utf8.h
